--- a/merged_data_EU.qmd
+++ b/merged_data_EU.qmd
@@ -36,6 +36,9 @@ library(fixest)
 library(stringmagic)
 library(plm)
 library(lpirfs)
+library(stargazer)
+library(broom) 
+library(kableExtra)
 ```
 
 ## Data input and Data cleaning from 2003 to 2023
@@ -1212,6 +1215,14 @@ round(colMeans(is.na(merged_data)) * 100, 2)
 ```
 After imputation, we confirmed that all target variables no longer contain missing values, ensuring the dataset is complete and ready for subsequent analysis.
 
+```{r}
+merged_data <- merged_data %>% 
+  arrange(company, year) %>% 
+  mutate(
+    patent_intensity_sales = patent_count / sales_million
+  )
+```
+
 ## Cross sectional analysis
 
 ### 1.by industry
@@ -1235,27 +1246,57 @@ data_2019 <- data_2019 %>%
   mutate(industry_group = ifelse(icb_sector %in% top20_industries, "Top20%", "Others"))
 data_2019$industry_group <- factor(data_2019$industry_group, levels = c("Top20%", "Others"))
 
-t.test(patent_count ~ industry_group, data = data_2019, alternative = "greater")
-
-ggplot(data_2019, aes(x = industry_group, y = patent_count)) +
-  geom_boxplot() +
-  labs(title = "Patens：Top20% industry vs others", y = "Patent Count", x = "") +
-  theme_minimal()
+t.test(patent_intensity_sales ~ industry_group, data = data_2019, alternative = "greater")
 
 wilcox.test(sales_growth_1y_percent ~ industry_group, data = data_2019, alternative = "greater")
 
-ggplot(data_2019, aes(x = industry_group, y = sales_growth_1y_percent)) +
-  geom_boxplot(outlier.shape = NA) +
-  geom_jitter(width = 0.2, alpha = 0.3, color = "steelblue") +
-  stat_summary(fun = mean, geom = "point", shape = 21, size = 3, fill = "red") +
-  coord_cartesian(ylim = c(-100, 300)) +  
-  labs(title = "Sales Growth : Top20% vs Others",
-       y = "1-Year Sales Growth (%)", x = "") +
-  theme_minimal()
 
 ```
 
-Based on 2019 data, firms in the top 20% R&D-intensive industries demonstrate significantly higher innovation output and stronger growth performance compared to others. A Welch two-sample t-test shows that their average patent count is significantly greater (p = 0.0161), and a Wilcoxon rank-sum test confirms that their sales growth is also significantly higher (p = 0.0009). These results support the hypothesis that operating in more R&D-intensive industries is associated with both increased innovation and better firm-level growth outcomes.
+```{r}
+ desc_stats <- data_2019 %>% 
+  group_by(industry_group) %>% 
+  summarise(
+    n_firms           = n(),
+    mean_pat_int      = mean(patent_intensity_sales,  na.rm = TRUE),
+    sd_pat_int        = sd(patent_intensity_sales,    na.rm = TRUE),
+    mean_sales_growth = mean(sales_growth_1y_percent, na.rm = TRUE),
+    sd_sales_growth   = sd(sales_growth_1y_percent,   na.rm = TRUE),
+    .groups = "drop"
+  )
+
+pat_test   <- t.test(patent_intensity_sales ~ industry_group,
+                     data = data_2019, alternative = "greater") %>% tidy()
+
+sales_test <- wilcox.test(sales_growth_1y_percent ~ industry_group,
+                          data = data_2019, alternative = "greater") %>% tidy()
+
+test_rows <- tibble(
+  industry_group     = c("t-test (patent intensity)", "Wilcoxon (sales growth)"),
+  n_firms            = NA,                
+  mean_pat_int       = c(pat_test$estimate, sales_test$estimate),
+  sd_pat_int         = c(pat_test$statistic, sales_test$statistic),
+  mean_sales_growth  = c(pat_test$p.value,  sales_test$p.value),
+  sd_sales_growth    = NA
+)
+
+results_table <- bind_rows(desc_stats, test_rows)
+
+stargazer(results_table,
+          type   = "text",     
+          title  = "Top-20 % Industries vs. Others (2019) ",
+          summary = FALSE,
+          digits = 2,
+          align  = TRUE,
+          covariate.labels = c(
+            "Group / Test", "N firms",
+            "Mean Patent Intensity", "SD Patent Intensity",
+            "Mean Sales Growth (%)", "SD Sales Growth (%)"
+          ))
+
+```
+
+Based on 2019 data, firms in the top 20% of R&D-intensive industries show significantly stronger innovation output and growth performance compared to those in other industries. A Welch two-sample t-test indicates that their average patent intensity (patents per million in sales) is significantly higher (p = 0.005), with a mean of 0.13 versus just 0.02 in other industries—nearly an eightfold difference. Similarly, the Wilcoxon rank-sum test shows that sales growth is also significantly higher in the top 20% group (p < 0.001), with an average growth rate of 265%, compared to 5% in the rest. However, the large standard deviation in sales growth (around 3300%) suggests substantial variation, likely influenced by a few extreme high-growth firms. Overall, these findings support the hypothesis that firms in more R&D-intensive industries tend to be more innovative and achieve better growth outcomes.
 
 ### 2.by country
 
@@ -1276,31 +1317,59 @@ data_2019 <- data_2019 %>%
   mutate(country_group = ifelse(country %in% top20_countries, "Top20%", "Others"))
 
 data_2019$country_group <- factor(data_2019$country_group, levels = c("Top20%", "Others"))
-t.test(patent_count ~ country_group, data = data_2019, alternative = "greater")
+t.test(patent_intensity_sales ~ country_group, data = data_2019, alternative = "greater")
 
-ggplot(data_2019, aes(x = country_group, y = patent_count)) +
-  geom_boxplot() +
-  labs(title = "Patents: Top20% countries vs Others", y = "Patent Count", x = "") +
-  theme_minimal()
 wilcox.test(sales_growth_1y_percent ~ country_group, data = data_2019, alternative = "greater")
-
-ggplot(data_2019, aes(x = country_group, y = sales_growth_1y_percent)) +
-  geom_boxplot(outlier.shape = NA) +
-  geom_jitter(width = 0.2, alpha = 0.3, color = "steelblue") +
-  stat_summary(fun = mean, geom = "point", shape = 21, size = 3, fill = "red") +
-  coord_cartesian(ylim = c(-100, 300)) +
-  labs(title = "Sales Growth: Top20% countries vs Others",
-       y = "1-Year Sales Growth (%)", x = "") +
-  theme_minimal()
-
 ```
 
-Firms in the top 20% R&D-intensive countries did not show significantly higher patent counts or sales growth compared to others. The t-test (p = 0.7063) and Wilcoxon test (p = 0.1253) both indicate no statistical difference, suggesting that country-level R&D intensity has limited impact on firm-level outcomes.
+```{r}
+desc_stats <- data_2019 %>% 
+  group_by(country_group) %>% 
+  summarise(
+    n_firms           = n(),
+    mean_pat_int      = mean(patent_intensity_sales,  na.rm = TRUE),
+    sd_pat_int        = sd(patent_intensity_sales,    na.rm = TRUE),
+    mean_sales_growth = mean(sales_growth_1y_percent, na.rm = TRUE),
+    sd_sales_growth   = sd(sales_growth_1y_percent,   na.rm = TRUE),
+    .groups = "drop"
+  )
 
-The empirical findings reveal a notable distinction between country-level and industry-level effects of R&D intensity. While firms in the top 20% R&D-intensive industries exhibit significantly higher innovation output and sales growth, no such relationship is observed at the country level. Specifically, neither patent counts nor sales growth differ significantly between firms from high-R&D countries and others. This suggests that the transmission of R&D intensity to firm-level performance is more strongly conditioned by industry-specific technological dynamics than by national R&D environments. 
+pat_test   <- t.test(patent_intensity_sales ~ country_group,
+                     data = data_2019, alternative = "greater") %>% tidy()
+
+sales_test <- wilcox.test(sales_growth_1y_percent ~ country_group,
+                          data = data_2019, alternative = "greater") %>% tidy()
+
+test_rows <- tibble(
+  country_group      = c("t-test (patent intensity)", "Wilcoxon (sales growth)"),
+  n_firms            = NA,
+  mean_pat_int       = c(pat_test$estimate, sales_test$estimate),
+  sd_pat_int         = c(pat_test$statistic, sales_test$statistic),
+  mean_sales_growth  = c(pat_test$p.value,   sales_test$p.value),
+  sd_sales_growth    = NA
+)
+results_table <- bind_rows(desc_stats, test_rows)
+
+stargazer(results_table,
+          type   = "text",     
+          summary = FALSE,
+          title  = "Top-20 % Countries vs. Others (2019) ",
+          digits = 2,
+          align  = TRUE,
+          covariate.labels = c(
+            "Group / Test", "N firms",
+            "Mean Patent Intensity", "SD Patent Intensity",
+            "Mean Sales Growth (%)", "SD Sales Growth (%)"
+          ))
+```
+
+Firms in the top 20% of R&D-intensive countries did not show significantly higher patent intensity or sales growth compared to others. The t-test (p = 0.061) and Wilcoxon test (p = 0.125) both suggest no statistically significant differences, implying that the impact of country-level R&D intensity on firm outcomes may be weaker or less direct.
+
+These empirical results highlight a notable contrast between industry- and country-level effects of R&D intensity. While firms in top R&D-intensive industries exhibit significantly higher innovation output and sales growth, no such relationship is observed at the country level. This suggests that the transmission of R&D to firm performance may be more strongly shaped by industry-specific technological dynamics than by broader national R&D environments.
 
 ## OLS 
 
+1.R&D intensity
 ```{r}
 panel_data <- merged_data %>%
   arrange(company, year) %>%
@@ -1328,19 +1397,79 @@ ols_model <- feols(
   growth ~ rd_lag1 + growth_lag1 + size_lag1 | icb_sector + country + year,
   data = panel_data
 )
-
 summary(ols_model)
 ```
-The OLS regression shows that lagged R&D intensity  has a positive and statistically significant effect on firm growth (p < 0.001), suggesting that past R&D investment contributes to future sales growth. In contrast, lagged firm growth  is negatively associated with current growth, which may indicate a mean-reversion effect. Firm size  has a weakly negative effect and is not statistically significant at the 5% level. The model controls for industry, country, and year fixed effects, and explains about 42% of the variation in growth .
+
+The OLS regression results show that lagged R&D intensity has a positive and statistically significant effect on firm-level sales growth (coefficient = 0.0000215, p < 0.001). This means that a 1 percentage point increase in R&D intensity leads to an approximate 0.00215% increase in sales growth. Although the magnitude is small, the effect is meaningful in a log-linear model and may accumulate over time.
+
+In contrast, lagged firm growth is significantly negative (–0.55), indicating a mean-reversion effect—firms that grew faster in the previous period tend to slow down subsequently. Lagged firm size also shows a weakly negative effect on growth, though it is not statistically significant at the 5% level.
+
+The model includes industry, country, and year fixed effects, and explains approximately 42% of the variation in firm growth, with standard errors clustered at the industry level.
+
+2.R&D growth
+```{r}
+panel_data1 <- merged_data %>%
+  arrange(company, year) %>%
+  group_by(company) %>%
+  mutate(
+    size_lag1   = dplyr::lag(sales_million, order_by = year),
+    year_lag1   = dplyr::lag(year, order_by = year),
+    rd_lag1     = dplyr::lag(rd_growth_1y_percent, order_by = year) 
+  ) %>%
+  ungroup() %>%
+  mutate(
+    growth = log(sales_million) - log(size_lag1)
+  ) %>%
+  group_by(company) %>%
+  mutate(
+    growth_lag1 = dplyr::lag(growth, order_by = year)
+  ) %>%
+  ungroup()
+
+ols_model_growth <- feols(
+  growth ~ rd_lag1 + growth_lag1 + size_lag1 | icb_sector + country + year,
+  data = panel_data1
+)
+summary(ols_model_growth)
+```
+
+3.R&D log level
+```{r}
+panel_data2 <- merged_data %>%
+  arrange(company, year) %>%
+  group_by(company) %>%
+  mutate(
+    size_lag1   = dplyr::lag(sales_million, order_by = year),
+    year_lag1   = dplyr::lag(year, order_by = year),
+    rd_log      = log1p(rd_million),  
+    rd_lag1     = dplyr::lag(rd_log, order_by = year)  
+  ) %>%
+  ungroup() %>%
+  mutate(
+    growth = log(sales_million) - log(size_lag1)
+  ) %>%
+  group_by(company) %>%
+  mutate(
+    growth_lag1 = dplyr::lag(growth, order_by = year)
+  ) %>%
+  ungroup()
+
+ols_model_log <- feols(
+  growth ~ rd_lag1 + growth_lag1 + size_lag1 | icb_sector + country + year,
+  data = panel_data2
+)
+summary(ols_model_log)
+```
 
 ## OLS-IV
 
+1.R&D intensity
 ```{r}
 panel_data <- panel_data %>%
   group_by(company) %>%
   arrange(year, .by_group = TRUE) %>%
   mutate(
-    patent_lag1 = dplyr::lag(patent_count, order_by = year)
+    patent_lag1 = dplyr::lag(patent_intensity_sales, order_by = year)
   ) %>%
   ungroup()
 
@@ -1348,16 +1477,57 @@ iv_model <- feols(
   growth ~ 1 + growth_lag1 + size_lag1 | icb_sector + country + year | rd_lag1 ~ patent_lag1,
   data = panel_data
 )
-
 summary(iv_model)
+```
 
+The 2SLS regression addresses potential endogeneity in lagged R&D intensity (rd_lag1) by using lagged patent intensity (patent_lag1) as an instrument. The first-stage F-statistic is very high (30,168.7, p < 0.001), confirming that the instrument is highly relevant. The Wu-Hausman test rejects the null of exogeneity (p < 0.001), justifying the need for instrumental variable estimation.
+
+In the second stage, the coefficient on fitted R&D intensity (fit_rd_lag1) is 0.0000266, which remains positive and marginally significant (p = 0.0608). This suggests that a 1 percentage point increase in R&D intensity leads to an estimated 0.00266% increase in firm sales growth. 
+
+Lagged firm growth again shows a strong negative effect (–0.55), reinforcing the earlier finding of mean reversion, and firm size remains weakly negative and not statistically significant at conventional levels.
+
+Overall, the IV results provide additional support for a positive, though modest, causal effect of R&D intensity on firm-level sales growth, and strengthen confidence in the interpretation of R&D as a productive investment. 
+
+2.R&D growth
+```{r}
+panel_data1 <- panel_data1 %>%
+  group_by(company) %>%
+  arrange(year, .by_group = TRUE) %>%
+  mutate(
+    patent_lag1 = dplyr::lag(patent_intensity_sales, order_by = year)
+  ) %>%
+  ungroup()
+
+iv_model_growth <- feols(
+  growth ~ 1 + growth_lag1 + size_lag1 | icb_sector + country + year | rd_lag1 ~ patent_lag1,
+  data = panel_data1
+)
+
+summary(iv_model_growth)
 
 ```
 
-To address endogeneity concerns, I employed a two-stage least squares (2SLS) approach, using lagged patent counts as an instrumental variable for R&D intensity. The results show that the predicted R&D intensity has no significant effect on firm growth (p = 0.486), and the first-stage F-statistic is low (F = 0.10), indicating a weak instrument.
+3.R&D log level
+```{r}
+panel_data2 <- panel_data2 %>%
+  mutate(rd_log = log1p(rd_million)) %>%
+  group_by(company) %>%
+  arrange(year, .by_group = TRUE) %>%
+  mutate(
+    patent_lag1 = dplyr::lag(patent_intensity_sales, order_by = year)
+  ) %>%
+  ungroup()
+
+iv_model_log <- feols(
+  growth ~ 1 + growth_lag1 + size_lag1 | icb_sector + country + year | rd_lag1 ~ patent_lag1,
+  data = panel_data2
+)
+summary(iv_model_log)
+```
 
 ## GMM
 
+1.R&D intensity
 ```{r}
 library(plm)
 merged_data <- merged_data %>%
@@ -1376,15 +1546,72 @@ gmm_model <- plm::pgmm(
   model = "twosteps",
   transformation = "ld"
 )
-
 plm:::summary.pgmm(gmm_model)
-
 ```
 
-Using a two-step System GMM model on a panel of 417 firms from 2010 to 2019, I find that lagged R&D intensity has a significant and positive effect on firm sales growth. This indicates that prior R&D investment contributes meaningfully to subsequent firm performance. The model also reveals a slight mean-reverting tendency in sales growth, along with mixed effects of firm size—current size negatively affects growth, while lagged size has a positive influence. The AR(2) test suggests no second-order autocorrelation, supporting the validity of the model specification. 
+Using a  System GMM model on a panel of 417 firms from 2010 to 2019, I found it examines the effect of R&D intensity on firm-level sales growth, while addressing endogeneity and dynamic panel bias. The coefficient on lagged R&D intensity  is estimated at 0.000138 and is highly statistically significant (z = 632.1, p < 0.001). This implies that a 1 percentage point increase in R&D intensity is associated with a 0.0138% increase in one-year sales growth, all else equal. Though the magnitude appears small, this is consistent with the scale and units of R&D intensity and the specification in levels.
+
+Lagged firm growth  enters with a negative and highly significant coefficient (–0.00268), indicating mean reversion in growth. Meanwhile, current and lagged firm size are both significant, with signs suggesting that changes in size are positively related to future growth.
+
+Model diagnostics support the reliability of the GMM estimation:
+The Sargan test yields a p-value < 0.001, indicating possible instrument proliferation, which is a known risk in GMM; however,
+The AR(2) test (p = 0.93) suggests no second-order autocorrelation, satisfying a critical assumption for GMM validity.
+The Wald test strongly rejects the null that coefficients are jointly zero (p < 2.2e-16).
+
+Overall, the results confirm that R&D intensity has a positive and statistically robust causal effect on firm growth, even when controlling for firm dynamics and unobserved heterogeneity. The GMM framework strengthens this interpretation by mitigating simultaneity and measurement error concerns that may bias OLS estimates.
+
+2.R&D growth
+```{r}
+gmm_model_growth <- plm::pgmm(
+  sales_growth_1y_percent ~ 
+    plm::lag(sales_growth_1y_percent, 1) + 
+    plm::lag(sales_million, 0:1) + 
+    plm::lag(rd_growth_1y_percent, 1) |
+    
+    plm::lag(sales_growth_1y_percent, 2:3) + 
+    plm::lag(rd_growth_1y_percent, 2:3),
+    
+  data = pdata,
+  effect = "individual",
+  model = "twosteps",
+  transformation = "ld"
+)
+
+plm:::summary.pgmm(gmm_model_growth)
+```
+
+3.R&D log level
+```{r}
+merged_data <- merged_data %>%
+  mutate(
+    rd_log = log1p(rd_million),
+    company = as.factor(company),
+    year = as.integer(year)
+  )
+
+pdata <- pdata.frame(merged_data, index = c("company", "year")) %>%
+  na.omit()
+
+gmm_model_log <- plm::pgmm(
+  sales_growth_1y_percent ~ 
+    plm::lag(sales_growth_1y_percent, 1) + 
+    plm::lag(sales_million, 0:1) + 
+    plm::lag(rd_log, 1) |
+    
+    plm::lag(sales_growth_1y_percent, 2:3) + 
+    plm::lag(rd_log, 2:3),
+    
+  data = pdata,
+  effect = "individual",
+  model = "twosteps",
+  transformation = "ld"
+)
+plm:::summary.pgmm(gmm_model_log)
+```
 
 ## LP-OLS
 
+1.R&D intensity
 ```{r}
 merged_data1 <- merged_data %>%
   mutate(
@@ -1415,10 +1642,54 @@ results_lp <- lp_lin(
 
 summary(results_lp)
 plot(results_lp)
+```
+
+TUsing the local projection method (Jordà, 2005), we estimate the dynamic effects between R&D intensity and sales growth over a 5-year horizon. The results show that a one-percentage-point shock to R&D intensity leads to a persistent and statistically significant increase in firm growth from year 1 to year 5, with p-values < 0.001 and the largest F-statistic reaching 2.39 at horizon 5. The effect peaks around year 3–5, indicating that innovation efforts have cumulative returns over time. 
+
+In contrast, sales growth does not significantly predict future R&D intensity across all horizons: all corresponding p-values are approximately 1.0, and the impulse response functions are flat and centered around zero. This asymmetry suggests a directional relationship—R&D drives growth, but not the other way around—helping to address concerns about reverse causality.
+
+2.R&D growth
+```{r}
+endog_data_growth <- data.frame(
+  sales_growth_1y_percent = merged_data$sales_growth_1y_percent,
+  rd_growth_1y_percent = merged_data$rd_growth_1y_percent
+)
+
+results_lp_growth <- lp_lin(
+  endog_data     = endog_data_growth,
+  lags_endog_lin = 0,
+  shock_type     = 1,
+  trend          = 0,
+  confint        = 1.96,
+  hor            = 5,
+  contemp_data   = contemp_data
+)
+
+summary(results_lp_growth)
+plot(results_lp_growth)
 
 ```
 
-The result examines the dynamic relationship between R&D intensity and sales growth using local projection models. Results show R&D spending significantly boosts sales growth over 5 periods (all p-values <0.01), with effects peaking in period 5 (p=3.55e-08), suggesting cumulative benefits. Conversely, sales growth shows no significant impact on R&D decisions (all p-values >0.9). This confirms R&D as a key driver of future sales growth, without reverse causality.
+3.R&D log level
+```{r}
+endog_data_log <- data.frame(
+  sales_growth_1y_percent = merged_data$sales_growth_1y_percent,
+  rd_log = merged_data$rd_log
+)
+
+results_lp_log <- lp_lin(
+  endog_data     = endog_data_log,
+  lags_endog_lin = 0,
+  shock_type     = 1,
+  trend          = 0,
+  confint        = 1.96,
+  hor            = 5,
+  contemp_data   = contemp_data
+)
+
+summary(results_lp_log)
+plot(results_lp_log)
+```
 
 ## LP-2SLS
 
@@ -1428,8 +1699,8 @@ The result examines the dynamic relationship between R&D intensity and sales gro
 # rd_intensity_percent = merged_data1$rd_intensity_percent)
 # shock_var <- endog_data$rd_intensity_percent
 
-# instrum_var <- data.frame(patent_count = as.numeric(merged_data1$patent_count))
-# instrum_var <- data.frame(patent = as.numeric(merged_data1$patent_count + 0))
+# instrum_var <- data.frame(patent_intensity_sales = as.numeric(merged_data1$patent_intensity_sales))
+# instrum_var <- data.frame(patent = as.numeric(merged_data1$patent_intensity_sales + 0))
 
 # contemp_data <- model.matrix(~ sales_million + year + country + icb_sector, data = merged_data1)[, -1]
 # contemp_data <- as.data.frame(contemp_data)
@@ -1453,4 +1724,76 @@ I tried to run the two-stage local projection model using lp_lin_iv() from the l
 
 “Tool must be given in data.frame format”.
 
-Even when I pass in the tool (patent_count) as a properly formatted data frame (no NA, correct length, confirmed with str() and class()), the function still fails. I also tested a minimal example and reinstalled the latest GitHub version of lpirfs, but the problem persists.  /(TOT)/~~ ORZ
+Even when I pass in the tool (patent_intensity_sales) as a properly formatted data frame (no NA, correct length, confirmed with str() and class()), the function still fails. I also tested a minimal example and reinstalled the latest GitHub version of lpirfs, but the problem persists.  /(TOT)/~~ ORZ
+
+## Summary Table
+
+1.Three indicators of OLS
+```{r}
+etable(ols_model, ols_model_growth, ols_model_log,
+       dict = c(rd_lag1 = "R&D (lagged)",
+                growth_lag1 = "Lagged Growth",
+                size_lag1 = "Lagged Size"),
+       headers = c("Intensity", "Growth", "Log Level"),
+       title = "Comparison of R&D Measures in OLS Regressions",
+       tex = FALSE)  
+```
+
+2.Three indicators of OLS-IV
+```{r}
+etable(iv_model, iv_model_growth, iv_model_log,
+       dict = c(rd_lag1 = "R&D (Instrumented)",
+                growth_lag1 = "Lagged Growth",
+                size_lag1 = "Lagged Size"),
+       headers = c("Intensity", "Growth", "Log Level"),
+       title = "Comparison of IV Estimates Using Alternative R&D Measures",
+       tex = FALSE) 
+```
+
+3.OLS,2SLS and GMM
+```{r}
+ols_tbl <- tidy(ols_model) |> mutate(Model = "OLS")
+iv_tbl  <- tidy(iv_model)  |> mutate(Model = "IV (2SLS)")
+gmm_sum <- summary(gmm_model)
+gmm_tbl <- as.data.frame(gmm_sum$coefficients)
+gmm_tbl <- gmm_tbl %>%
+  tibble::rownames_to_column("term") %>%
+  rename(estimate = Estimate, std.error = `Std. Error`, p.value = `Pr(>|z|)`) %>%
+  mutate(Model = "GMM") %>%
+  select(term, estimate, std.error, p.value, Model)
+all_models <- bind_rows(ols_tbl, iv_tbl, gmm_tbl)
+final_table <- all_models %>%
+  filter(term %in% c("rd_lag1", "growth_lag1", "size_lag1", 
+                     "plm::lag(rd_intensity_percent, 1)", 
+                     "plm::lag(sales_growth_1y_percent, 1)", 
+                     "plm::lag(sales_million, 0:1)0", 
+                     "plm::lag(sales_million, 0:1)1")) %>%
+  mutate(
+    Variable = case_when(
+      term %in% c("rd_lag1", "plm::lag(rd_intensity_percent, 1)") ~ "R&D (lagged)",
+      term %in% c("growth_lag1", "plm::lag(sales_growth_1y_percent, 1)") ~ "Lagged Growth",
+      term %in% c("size_lag1", "plm::lag(sales_million, 0:1)0") ~ "Lagged Size (t)",
+      term == "plm::lag(sales_million, 0:1)1" ~ "Lagged Size (t-1)"
+    ),
+    Signif = case_when(
+      p.value < 0.001 ~ "***",
+      p.value < 0.01  ~ "**",
+      p.value < 0.05  ~ "*",
+      p.value < 0.1   ~ ".",
+      TRUE            ~ ""
+    ),
+    Coef_SE = paste0(sprintf("%.6f", estimate), " (", sprintf("%.6f", std.error), ")", Signif)
+  ) %>%
+  select(Model, Variable, Coef_SE) %>%
+  tidyr::pivot_wider(names_from = Model, values_from = Coef_SE) %>%
+  relocate(Variable)
+final_table %>%
+  kbl(
+    caption = "Comparison of OLS, IV, and GMM Estimates",
+    align = "lccc"
+  ) %>%
+  kable_styling(full_width = FALSE, bootstrap_options = c("striped", "hover")) %>%
+  column_spec(1, bold = TRUE)
+
+```
+
